# .tree-sitter-cwscript-old

./: Cargo.toml  binding.gyp  cw20base.cws  grammar.js  package.json  tree-sitter-cwscript.wasm
bindings/node/: binding.cc  index.js
bindings/rust/: lib.rs
src/: grammar.json  node-types.json  parser.c
test/corpus/: events.txt
