[package]
name = "tree-sitter-cwscript"
description = "CWScript grammar for the tree-sitter parsing library"
version = "0.0.2"
keywords = ["incremental", "parsing", "CWScript"]
categories = ["parsing", "text-editors"]
repository = "https://github.com/terran-one/tree-sitter-cwscript"
edition = "2018"
license = "MIT"

build = "bindings/rust/build.rs"
include = ["bindings/rust/*", "grammar.js", "queries/*", "src/*"]

[lib]
path = "bindings/rust/lib.rs"

[dependencies]
tree-sitter = "~0.20"

[build-dependencies]
cc = "1.0"
